--- a/src/components/MarkdownPage.module.css
+++ b/src/components/MarkdownPage.module.css
@@ -16,6 +16,17 @@ h1.heading {
   max-width: 100%;
 }
 
+.markdown blockquote {
+  padding: 0.2rem 0rem 0.2rem 0.7rem;
+  border-left: 5px solid var(--color-secondary);
+  border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem;
+}
+
+.markdown blockquote p {
+  margin-bottom: 0;
+}
+
 .markdown p {
   text-align: justify;
 }
