feat: Added ID to headings, color changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --color-secondary: #333c4a;
   --color-highlight: #ff8c42;
   --color-active: #ce93d8;
-  --color-contrast: #00b4d8;
+  --color-contrast: #69717a;
   --color-text: white;
 
   --color-mention-text: #a2d2ff;
