--- a/src/components/MarkdownPage.module.css
+++ b/src/components/MarkdownPage.module.css
@@ -10,10 +10,16 @@ h1.heading {
   padding-top: 0;
 }
 
-.markdown img {
+.image {
   display: block;
   margin: 0 auto;
   width: 50rem;
+  max-width: 100%;
+}
+
+.image img {
+  display: block;
+  margin: 0 auto;
   max-width: 100%;
 }
 
@@ -41,22 +47,6 @@ h1.heading {
   transition: background-color 0.2s ease;
 }
 
-.markdown .mention {
-  color: var(--color-mention-text);
-  background-color: var(--color-mention-bg);
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-a.command_link {
-  text-decoration: none;
-}
-
-a.command_link:hover code {
-  background-color: var(--color-highlight);
-  cursor: pointer;
-}
-
 .markdown li:not(:last-child) {
   margin-bottom: 0.5rem;
 }
@@ -65,77 +55,9 @@ a.command_link:hover code {
   margin-top: 0.5rem;
 }
 
-.markdown .command {
-  padding: 0.3rem 0.6rem;
-  border-radius: 0.5rem;
-  margin: 0 0.1rem;
-}
-
-.command {
-  color: var(--color-text);
-  background-color: var(--color-secondary);
-}
-
-.command > span {
-  text-wrap: nowrap;
-}
-
-.command .parameter {
-  padding: 0.05rem 0.4rem;
-  padding-right: 0.2rem;
-  background-color: var(--color-contrast);
-  border: 1px solid var(--color-contrast);
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
-.command .value {
-  padding: 0.05rem 0.4rem;
-  padding-left: 0.4rem;
-  background-color: var(--color-secondary);
-  border: 1px solid var(--color-contrast);
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-}
-
-.notice {
-  margin: 1.5rem auto;
-  max-width: 50rem;
-}
-
-.notice p {
-  margin-bottom: 0;
-}
-
-.notice.warn {
-  --color-notice-primary: #ffd166;
-  --color-notice-secondary: #4b4223;
-  --color-notice-text-head: #3e2723;
-  --color-notice-text: white;
-}
-
-.notice.info {
-  --color-notice-primary: #3a86ff;
-  --color-notice-secondary: #293b5f;
-  --color-notice-text-head: white;
-  --color-notice-text: white;
-}
-
-.notice_header {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-  padding: 0.2rem 1rem;
-  border: 1px solid var(--color-notice-primary);
-  background-color: var(--color-notice-primary);
-  color: var(--color-notice-text-head);
-}
-
-.notice_body {
-  white-space: pre-line;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--color-notice-primary);
-  background-color: var(--color-notice-secondary);
-  color: var(--color-notice-text);
+.markdown .mention {
+  color: var(--color-mention-text);
+  background-color: var(--color-mention-bg);
+  font-weight: bold;
+  text-decoration: underline;
 }
