--- a/src/components/layout/BaseLayout.module.css
+++ b/src/components/layout/BaseLayout.module.css
@@ -4,6 +4,17 @@
   display: flex;
 }
 
+.logo {
+  position: relative;
+  top: -0.2rem;
+
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+  border-radius: 50%;
+  transform: scale(1.5);
+}
+
 .mobile_dropdown {
   font-size: 1.6rem;
   height: 100% !important;
